--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,4 +2,7 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="background">#f0c382</color>
+    <color name="buttonColor">#de6e3e</color>
+    <color name="error">#FF6347</color>
 </resources>
