--- a/app/src/main/res/layout-land/activity_images.xml
+++ b/app/src/main/res/layout-land/activity_images.xml
@@ -12,10 +12,11 @@
         android:id="@+id/imageActivityTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="48dp"
+        android:layout_marginStart="8dp"
+        android:maxWidth="250dp"
         android:text="Title"
         android:textSize="48sp"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -23,13 +24,13 @@
         android:id="@+id/imagesRecyclerView"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginStart="16dp"
+        android:layout_marginStart="24dp"
         android:layout_marginTop="16dp"
-        android:layout_marginEnd="16dp"
+        android:layout_marginEnd="24dp"
         android:layout_marginBottom="16dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageActivityTitle"
+        app:layout_constraintStart_toEndOf="@+id/imageActivityTitle"
+        app:layout_constraintTop_toTopOf="parent"
         tools:listitem="@layout/image_row" />
 </androidx.constraintlayout.widget.ConstraintLayout>
