--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -2,8 +2,8 @@
     <!-- Base application theme. -->
     <style name="Base.Theme.FortUJI" parent="Theme.Material3.DayNight.NoActionBar">
         <!-- Customize your light theme here. -->
-        <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
+         <item name="android:windowBackground">@color/background</item>
+        <item name="colorAccent">@color/buttonColor</item>
     </style>
-
     <style name="Theme.FortUJI" parent="Base.Theme.FortUJI" />
 </resources>
